--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ELASTIC_VERSION=8.4.1
 #
 # Superuser role, full access to cluster management and data indices.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-ELASTIC_PASSWORD='changeme'
+ELASTIC_PASSWORD='dlengus'
 
 # User 'logstash_internal' (custom)
 #
@@ -19,4 +19,4 @@ LOGSTASH_INTERNAL_PASSWORD='changeme'
 #
 # The user Kibana uses to connect and communicate with Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-KIBANA_SYSTEM_PASSWORD='changeme'
+KIBANA_SYSTEM_PASSWORD='dlengus'
